--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Main development is driven by Novell at the time of writing, in close
 relationship to AMD which provides free documentation for the chipsets.
 
 More detailed notes about
-  * supported chipsets
+  * supported chipsets (replicated below)
   * radeonhd driver options
   * troubleshooting
 are available in the included radeonhd(4) man page.
@@ -19,12 +19,63 @@ Further information about
 is available on the wiki at http://wiki.x.org/wiki/radeonhd
 
 This README file contains the following sections:
+  * Supported Chipsets
   * Major Changes
   * More Resources
   * Installation
   * Common problems during builds
   * Getting and updating the radeonhd source code
   * Feeding back source code
+
+
+
+Supported Chipsets
+==================
+
+This list is automatically generated from the RHDIdentify() function
+in src/rhd_id.c. Do not remove the begin/end markers.
+
+BEGIN_DEVICE_LIST
+  * RV505:	Radeon X1550, X1550 64bit
+  * RV515:	Radeon X1300, X1550, X1600; FireGL V3300, V3350
+  * RV516:	Radeon X1300, X1550, X1550 64-bit, X1600; FireMV 2250
+  * R520:	Radeon X1800; FireGL V5300, V7200, V7300, V7350
+  * RV530:	Radeon X1300 XT, X1600, X1600 Pro, X1650; FireGL V3400, V5200
+  * RV535:	Radeon X1300, X1650
+  * RV550:	Radeon X2300 HD
+  * RV560:	Radeon X1650
+  * RV570:	Radeon X1950, X1950 GT; FireGL V7400
+  * R580:	Radeon X1900, X1950; AMD Stream Processor
+  * R600:	Radeon HD 2900 GT/Pro/XT; FireGL V7600/V8600/V8650
+  * RV610:	Radeon HD 2350, HD 2400 Pro/XT, HD 2400 Pro AGP; FireGL V4000
+  * RV620:	Radeon HD 3450, HD 3470
+  * RV630:	Radeon HD 2600 LE/Pro/XT, HD 2600 Pro/XT AGP; Gemini RV630;
+         	FireGL V3600/V5600
+  * RV635:	Radeon HD 3650, HD 3670
+  * RV670:	Radeon HD 3690, 3850, HD 3870, FireGL V7700, FireStream 9170
+  * R680:	Radeon HD 3870 X2
+  * M52:	Mobility Radeon X1300
+  * M54:	Mobility Radeon X1400; M54-GL
+  * M56:	Mobility Radeon X1600; Mobility FireGL V5200
+  * M58:	Mobility Radeon X1800, X1800 XT; Mobility FireGL V7100, V7200
+  * M62:	Mobility Radeon X1350
+  * M64:	Mobility Radeon X1450, X2300
+  * M66:	Mobility Radeon X1700, X1700 XT; FireGL V5250
+  * M68:	Mobility Radeon X1900
+  * M71:	Mobility Radeon HD 2300
+  * M72:	Mobility Radeon HD 2400; Radeon E2400
+  * M74:	Mobility Radeon HD 2400 XT
+  * M76:	Mobility Radeon HD 2600;
+         	(Gemini ATI) Mobility Radeon HD 2600 XT
+  * M82:	Mobility Radeon HD 3400
+  * M86:	Mobility Radeon HD 3650, HD 3670, Mobility FireGL V5700
+  * M88:	Mobility Radeon HD 3850, HD 3850 X2, HD 3870, HD3870 X2
+  * RS600:	Radeon Xpress 1200, Xpress 1250
+  * RS690:	Radeon X1200, X1250, X1270
+  * RS740:	RS740, RS740M
+  * RS780:	Radeon HD 3100/3200/3300 Series
+  * RV770:	Radeon HD 4800 Series; Everest, K2, Denali ATI FirePro
+END_DEVICE_LIST
 
 
 
