README: Fix list of sections

--- a/README
+++ b/README
@@ -19,7 +19,7 @@ Further information about
 is available on the wiki at http://wiki.x.org/wiki/radeonhd
 
 This README file contains the following sections:
-  * Recent changes
+  * Major Changes
   * More Resources
   * Installation
   * Common problems during builds
