--- a/man/radeonhd.man
+++ b/man/radeonhd.man
@@ -393,6 +393,17 @@ this option is needed to get your card working correctly, please report to the
 mailing list.
 .RE
 .TP
+.BI "Option \*qAudio\*q \*q" boolean \*q
+This option enables the audio hardware, wich is responsible for delivering audio data
+to the different HDMI capable conntectors and used to communicate with the audio
+driver of the operation system. The default is
+.BR off .
+.TP
+.BI "Option \*qHDMI\*q \*q" boolean \*q
+Possible values are "DVI-I 0", "DVI-I 1"..,"DVI-D 0","DVI-I 1",.., "all".
+This option enables HDMI-Audio and HDMI-Info packets on the specified connector.
+This is the only way enabling HDMI at the moment, since decoding E-EDID data to check if monitor supports HDMI is not implemented (yet).
+.TP
 .BI "Option \*qTVMode\*q \*q" tv-mode \*q
 The TV standard to use on the TV output.
 .RS
