Output/Coherent: Fix bug in parser, add man page.

--- a/man/radeonhd.man
+++ b/man/radeonhd.man
@@ -404,6 +404,35 @@ Possible values are "DVI-I 0", "DVI-I 1"..,"DVI-D 0","DVI-I 1",.., "all".
 This option enables HDMI-Audio and HDMI-Info packets on the specified connector.
 This is the only way enabling HDMI at the moment, since decoding E-EDID data to check if monitor supports HDMI is not implemented (yet).
 .TP
+.BI "Option \*qCoherent\*q \*q" string \*q
+There are two different ways to program the TMDS encoder in an output
+for best signal quality for the transmitter chip used inside a digital 
+monitor. This option may be used to set the programming for each output 
+individually. The string is a space separated list of
+.B <output_transmitter>=on|off. 
+Possible  values for 
+.B <output_transmitter> 
+are: 
+.B TMDS A, 
+.B TMDS B,
+.B  UNIPHY_A,
+.B UNIPHY_B,
+.B AtomOutputTMDSA,
+.B AtomOutputLVTMA,
+.B AtomOutputKldskpLvtma,
+.B AtomOutputUniphyA,
+.B  AtomOutputUniphyB. 
+The log file should be consulted 
+on which ones to use. The line:
+.B "Option \*qCoherent\*q \*qTMDS A=off TMDS B=on\*q"
+will set coherent mode to 
+.B off 
+for TMDS A and to 
+.B on 
+for TMDS B.
+The default for all outputs is
+.BR off .
+.TP
 .BI "Option \*qTVMode\*q \*q" tv-mode \*q
 The TV standard to use on the TV output.
 .RS
