--- a/README
+++ b/README
@@ -73,6 +73,11 @@ BEGIN_DEVICE_LIST
   * RS740:	RS740, RS740M
   * RS780:	Radeon HD 3100/3200/3300 Series
   * RV770:	Radeon HD 4800 Series; Everest, K2, Denali ATI FirePro
+  * R700:	Radeon R700
+  * M98:	Radeon M98 Mobility
+  * RV730:	Radeon HD4670, HD4650
+  * M96:	Radeon M96 Mobility
+  * RV710:	Radeon HD4570, HD4350
 END_DEVICE_LIST
 
 
