Document that Option "DRI" also affects Xv
Option "DRI" not only enables 3D acceleration, but also
(2D) Xv video acceleration. The video part was not
mentioned before.

Thanks to John Chivall for catching this:
https://bugzilla.redhat.com/show_bug.cgi?id=473819

--- a/man/radeonhd.man
+++ b/man/radeonhd.man
@@ -231,8 +231,8 @@ Rotation isn't supported for the AccelMethods \*qnone\*q and \*qshadowfb\*q.
 .RE
 .TP
 .BI "Option \*qDRI\*q"
-Use this option to enable 3D acceleration using DRI (R5xx and RS6xx chips
-only for the moment).
+Use this option to enable 3D and Xv acceleration using DRI
+(R5xx and RS6xx chips only for the moment).
 Currently, the default is
 .BR off .
 .TP
