--- a/README
+++ b/README
@@ -87,6 +87,14 @@ Major Changes
 
 Read ChangeLog for a complete list.
 
+- Version 1.2.4
+
+  - Added HDMI support.
+  - Added support for RV710, RV730 (DCE 3.2).
+  - Added screen rotation support.
+  - Added RandR 1.3 panning support.
+  - Many acceleration and build fixes.
+
 - Version 1.2.3
 
   - Added Command Submission infrastructure.
