man page: Add R7xx to NAME section

--- a/man/radeonhd.man
+++ b/man/radeonhd.man
@@ -7,7 +7,7 @@
 .\"
 .\"
 .SH NAME
-radeonhd \- AMD GPG (ATI) R5xx/R6xx video driver
+radeonhd \- AMD GPG (ATI) R5xx/R6xx/R7xx video driver
 .\"
 .\"
 .SH SYNOPSIS
