Trivial typo in properties / man page.

--- a/man/radeonhd.man
+++ b/man/radeonhd.man
@@ -513,7 +513,7 @@ unknown VGA DVI DVI-I DVI-A DVI-D HDMI Panel DisplayPort
 .PD
 .PP
 Connector type, as far as known to the driver.
-.I PANEL
+.I Panel
 describes laptop-internal (normally LVDS) displays.
 .RE
 .TP
