Xv: Make color space selectable on r6xx/r7xx
Add functionality to switch between Rec.601 and Rec.709 color space
conversion constants.

Default behaviour is to use Rec.709 for videos 928px or wider,
and Rec.601 otherwise.  Force a particular color space by setting the
new XV_COLORSPACE attribute to 1 (Rec.601) or 2 (Rec.709).  A value of 0
means do auto-detection.

man page updated accordingly.

This is a follow-up to bug #22901.

--- a/man/radeonhd.man
+++ b/man/radeonhd.man
@@ -651,6 +651,31 @@ Sets the coherent flag for TMDS signals. See also
 .IR "Coherent" .
 .\"
 .\"
+.SH XVIDEO ATTRIBUTES
+On R600 and above, the following XVideo attributes are supported.
+Use
+.B xvattr
+to query and set these values at runtime.
+.TP
+.B XV_COLORSPACE
+Select the Y'CbCr color space of the source video.  Accepted values
+are 'auto-detect'(0), 'Rec.601'(1), and 'Rec.709'(2).
+.RS
+.PP
+Rec.709 is the standard which applies to high-definition television
+broadcasting and "HD" digital video in general; Rec.601 applies to all
+other digital video.
+When 'auto-detect' is selected, Rec.709 is used for videos encoded
+at least 928px wide, and Rec.601 is used otherwise.
+This cut-off is lower than 720p so that the correct color space can be
+applied to some media with non-standard resolutions that have high-probability
+of having originated from Rec.709 encoded content.
+.PP
+Default is
+.B 'auto-detect'(0).
+.RE
+.\"
+.\"
 .SH KNOWN BUGS
 As the
 .B radeonhd
